# Rust-CRUD-API

./: Cargo.toml  README.md  database.splite  database.sqlite-shm  database.sqlite-wal
migrations/2024-09-11-113641_create_rustac/: up.sql
src/: auth.rs  main.rs  models.rs  repositories.rs  schema.rs
