[package]
name = "nitika"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.128"
base64 = "0.22.1"
diesel = { version = "2.2.4", features = ["sqlite", "r2d2"] }
rocket_sync_db_pools = { version = "0.1.0-rc", features = ["diesel_sqlite_pool"] } 
diesel_migrations = "2.0"